--- a/src/pages/newsurestaries/Surestarie.css
+++ b/src/pages/newsurestaries/Surestarie.css
@@ -49,3 +49,9 @@
     align-items: center;
     justify-content: space-between;
   }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
